it/cp/influxdb/influxdb-template.yaml
---
# Source: influxdb/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  labels:
    helm.sh/chart: influxdb-4.8.5
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/instance: influxdb
    app.kubernetes.io/version: "1.8.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
  - name: api
    port: 8086
    targetPort: api
  - name: rpc
    port: 8088
    targetPort: rpc
  selector:
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/instance: influxdb
---
# Source: influxdb/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
  labels:
    helm.sh/chart: influxdb-4.8.5
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/instance: influxdb
    app.kubernetes.io/version: "1.8.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: influxdb
      app.kubernetes.io/instance: influxdb
  serviceName: "influxdb"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: influxdb
        app.kubernetes.io/instance: influxdb
    spec:
      serviceAccountName: influxdb
      containers:
      - name: influxdb
        image: "influxdb:1.7.4-alpine"
        imagePullPolicy: "IfNotPresent"
        resources:
          limits:
            cpu: 2
            memory: 2Gi
          requests:
            cpu: 0.1
            memory: 256Mi
        ports:
        - name: api
          containerPort: 8086
        - name: rpc
          containerPort: 8088
        livenessProbe:
          httpGet:
            path: /ping
            port: api
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /ping
            port: api
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
        volumeMounts:
        - name: influxdb-data
          mountPath: /var/lib/influxdb
        - name: config
          mountPath: /etc/influxdb
      volumes:
      - name: config
        configMap:
          name: influxdb
      # Cannot use existing claim in enterprise mode
  # Must use volume claim template in enterprise mode
  volumeClaimTemplates:
    - metadata:
        name: influxdb-data
        annotations:
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: influxdb/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: influxdb
  labels:
    helm.sh/chart: influxdb-4.8.5
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/instance: influxdb
    app.kubernetes.io/version: "1.8.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
      - "influxdb.foobar.com"
      secretName: 
  rules:
  - host: influxdb.foobar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: influxdb
          servicePort: 8086
